--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
-    <link rel="stylesheet" href="css/words.css">
+    <link rel="stylesheet" href="words.css">
     <title>Document</title>
 </head>
 <body>  
