--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2><span>F</span><span>ollow</span></h2>    
     </section>
     <section >
-        <a href="/html/index.html">
+       <a href="https://vladimirceapa.github.io/My-Porfolio/">
             <div class="loader">
                 <h2 class="loader_home">Home</h2>
                 <span style="--i: 1"></span>
